feat: :construction: Add route schema validation
Use 'celebrate' to handle Bad Request cases.
