# src/modules/users/infra/http/routes/clients.routes.ts
@@ -1,10 +1,29 @@
 import { Router } from 'express';
+import { celebrate, Segments, Joi } from 'celebrate';
 
 import ClientsController from '../controllers/ClientsController';
 
 const clientController = new ClientsController();
 const clientsRouter = Router();
 
-clientsRouter.post('/', clientController.create);
+clientsRouter.post(
+  '/',
+  celebrate({
+    [Segments.BODY]: {
+      email: Joi.string().email().required(),
+      cpf: Joi.string().required(),
+      address: Joi.object({
+        postal_code: Joi.number().required(),
+        uf: Joi.string(),
+        city: Joi.string(),
+        neighborhood: Joi.string(),
+        street: Joi.string().required(),
+        street_number: Joi.string(),
+        complement: Joi.string(),
+      }),
+    },
+  }),
+  clientController.create,
+);
 
 export default clientsRouter;
